# mle-training

./: .pre-commit-config.yaml  Dockerfile  README.md  Workspacesettings.json  entrypoint.sh  nonstandardcode.py  setup.cfg  setup.py
deploy/conda/: env.yml
src/house_price/: ingest_data.py  logger.py  score.py  train.py
src/housing_price/: ingest_data.py  logger.py  score.py  train.py
src/housing_price.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: installation_test.py
tests/functional_tests/: functional_test.py
tests/unit_tests/: ingest_data_test.py  score_test.py  test_ingest_data.py  test_train.py  train_test.py
