[metadata]
name = house_price
version = 0.3
author = Vinay Sirasapalli
author_email = vinay.sirasapall@tigeranalytics.com
description = Package made for assignment 4.1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vinaysirasapalli169/mle-training
project_urls =
    Bug Tracker = https://github.com/vinaysirasapalli169/mle-training/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[flake8]
ignore = ["E501"]